# zaycevnet-api

./: LICENSE  README.md  example.py  pyproject.toml
zaycevnet/: __init__.py  client.py  exceptions.py  models.py
