[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zaycevnet-api"
version = "0.1.0"
description = "A clean, typed Python client for the Zaycev.net external API."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Dmitry Odintsov" }]
keywords = ["zaycev", "music", "api", "client"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = ["requests>=2.25"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "responses>=0.23", "ruff>=0.1"]

[tool.setuptools.packages.find]
include = ["zaycevnet*"]

[tool.ruff]
line-length = 88
target-version = "py38"
